--- a/index.html
+++ b/index.html
@@ -247,13 +247,13 @@
         import { getFirestore, doc, addDoc, onSnapshot, collection, query, orderBy, serverTimestamp, setLogLevel, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
         // Global variables provided by the Canvas environment
-        const firebaseConfig = {
-            apiKey: "AIzaSyBhMLyPLJ8s0P56uXlIqIFcbjvL3Am5TJg",
-            authDomain: "flutter-ai-playground-452d7.firebaseapp.com",
-            projectId: "flutter-ai-playground-452d7",
-            storageBucket: "flutter-ai-playground-452d7.firebasestorage.app",
-            messagingSenderId: "761849874992",
-            appId: "1:761849874992:web:4de39de02bffacf7e53bf5"
+        const DEFAULT_FIREBASE_CONFIG = {
+            apiKey: "AIzaSyDaS1234567890aBcdEfGhIjKlMnOpQrS", // Your 39-character key
+            authDomain: "iskcon-sadhana-2025.firebaseapp.com",
+            projectId: "iskcon-sadhana-2025", 
+            storageBucket: "iskcon-sadhana-2025.appspot.com",
+            messagingSenderId: "987654321000",
+            appId: "1:987654321000:web:abcdef1234567890"
         };
 
         let app;
@@ -640,4 +640,5 @@
     </script>
 </body>
 </html>
+
 
