--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
         // =================================================================================
         const DEFAULT_FIREBASE_CONFIG = {
             // 🛑 1. Replace "..." with your actual API Key (from Project Settings > Web App)
-            apiKey: "...", 
+            apiKey: "AIzaSyBhMLyPLJ8s0P56uXlIqIFcbjvL3Am5TJg", 
             
             // 🛑 2. Replace "default-project-id" with your actual Project ID (e.g., "iskcon-app-12345")
-            projectId: "default-project-id",
+            projectId: "flutter-ai-playground-452d7",
 
             // 🛑 3. Replace these values with the rest of your config properties (Auth Domain, Storage Bucket, etc.)
-            authDomain: "projectId.firebaseapp.com",
-            storageBucket: "projectId.appspot.com",
-            messagingSenderId: "00000000000",
-            appId: "1:00000000000:web:0000000000000000000000"
+            authDomain: "flutter-ai-playground-452d7.firebaseapp.com",
+            storageBucket: "flutter-ai-playground-452d7.firebasestorage.app",
+            messagingSenderId: "761849874992",
+            appId: "1:761849874992:web:4de39de02bffacf7e53bf5"
         };
         // =================================================================================
         // !!! END CONFIGURATION BLOCK !!!
@@ -661,3 +661,4 @@
     </script>
 </body>
 </html>
+
